# animal-name

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
