[package]
name = "animal-name"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angry-purple-tiger = "*"
ecc608-linux = "*"
helium-crypto = { git = "https://github.com/helium/helium-crypto-rs", tag="v0.2.1" }
