cargo-features = ["strip"]

[package]
name = "animal-name"
version = "0.2.1-alpha.0"
edition = "2018"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
angry-purple-tiger = "*"
ecc608-linux = "*"
helium-crypto = { git = "https://github.com/helium/helium-crypto-rs", tag="v0.2.1" }
